# jzfs-rust

./: .all-contributorsrc  .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.yaml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: Deploy.yaml  build-api.yml  build.yml  deployment.yml  flow.yaml  push.yml
chart-proxy/: Chart.yaml  values.yaml
chart-proxy/templates/: deployment.yaml  ingress.yaml  service.yaml
chart/templates/: deployment.yaml  ingress.yaml  service.yaml
charts/: Chart.yaml  values.yaml
charts/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
config/: config.toml  default.toml
crate/config/: Cargo.toml
crate/config/src/: arch.rs  email.rs  http.rs  lib.rs  session.rs
crate/entity/: Cargo.toml
crate/entity/src/: common.rs  db.rs  lib.rs
crate/entity/src/dto/: auth.rs  email.rs  mod.rs  repo.rs  users.rs  version.rs
crate/entity/src/dto/org/: team.rs
crate/entity/src/org/: mod.rs  team.rs  team_invite.rs  team_user.rs  team_user_access.rs  unit.rs
crate/entity/src/repos/: mod.rs  repo.rs  star.rs
crate/entity/src/users/: keys.rs  mod.rs  users.rs
crate/filetree/: Cargo.toml
crate/filetree/src/: lib.rs  node.rs  tree.rs
crate/filetree/src/location/: folder.rs  index.rs  mod.rs
crate/filetree/test/data/: test.txt_555
crate/module/: Cargo.toml
crate/router/: Cargo.toml
crate/router/src/: lib.rs  starter.rs
crate/router/src/api/v1/: mod.rs  setup.rs  version.rs
crate/router/src/api/v1/auth/: forget.rs  local.rs  login.rs  logout.rs  mod.rs
crate/router/src/api/v1/email/: captcha.rs  mod.rs
crate/router/src/api/v1/org/: mod.rs
crate/router/src/api/v1/org/team/: create.rs  delete.rs  get.rs  mod.rs  update.rs
crate/router/src/api/v1/users/: apply.rs  get.rs  mod.rs
crate/service/: Cargo.toml
crate/service/src/: lib.rs
crate/service/src/email/: captcha.rs  mod.rs
crate/service/src/redis/: mod.rs
docker/SSHServer/: Dockerfile
docs/: data-repositories.md
gitdata-apis/: Cargo.toml
gitdata-apis/config/: rpc.toml
gitdata-apis/src/: lib.rs  main.rs
gitdata-apis/src/apis/: app_router.rs  app_writer.rs  mod.rs
gitdata-apis/src/apis/v1/: mod.rs
gitdata-apis/src/apis/v1/auth/: logout.rs  mod.rs  passwd.rs
gitdata-apis/src/apis/v1/email/: captcha.rs
gitdata-apis/src/apis/v1/repo/: branch.rs  info.rs  mod.rs  repo.rs
gitdata-apis/src/apis/v1/user/: apply.rs  info.rs  mod.rs  setting.rs  ssh_keys.rs  token_key.rs  users.rs
gitdata-apis/src/jobs/: email.rs  mod.rs  sync_repo.rs
gitdata-apis/src/middleware/: session.rs
gitdata-apis/src/service/: core_git_rpc.rs  mod.rs  rpc.rs
gitdata-apis/src/service/auth/: mod.rs  passwd.rs
gitdata-apis/src/service/emails/: captcha.rs
gitdata-apis/src/service/repository/: access.rs  branchs.rs  info.rs  mod.rs  new_repo.rs  repo.rs
gitdata-apis/src/service/users/: _assist.rs  apply.rs  info.rs  mod.rs  setting.rs  ssh_keys.rs  token.rs
gitdata-gits/: Cargo.toml
gitdata-gits/src/: main.rs  service.rs
gitdata-gits/src/http/: mod.rs  pack.rs  refs.rs  text.rs
gitdata-gits/src/mount/: git.rs  local.rs  mod.rs  nfs.rs  s3.rs
gitdata-gits/src/rpc/: core_git.rs  git_core.rs  mod.rs  repository.rs
gitdata-gits/src/ssh/: handle.rs  mod.rs
gitdata-health/: Cargo.toml
gitdata-nfs/: Cargo.toml
gitdata-proxy/: Cargo.toml
gitdata-proxy/src/: main.rs
gits/: Cargo.toml
html/: EmailTemp.html  email.code.html
jiaozifs/: Cargo.toml
jiaozifs-models/: Cargo.toml
jiaozifs-models/src/: aksk.rs  aksks.rs  branches.rs  commit.rs  commits.rs  lib.rs  members.rs  merge_requests.rs  repositories.rs  tags.rs  trees.rs  users.rs  wips.rs
jiaozifs-models/src/filemode/: filemode.rs  mod.rs
jiaozifs-utlis/: Cargo.toml
jiaozifs-utlis/src/: date.rs  lib.rs
jiaozifs-utlis/src/hash/: hash.rs  hash_reader.rs  mod.rs
lib-session/: Cargo.toml
libs/: health.rs  lib.rs
libs/config/: api.rs  database.rs  email.rs  git.rs  mod.rs  rpc.rs
libs/logic/: init.rs  mod.rs  subscriber.rs
libs/model/: mod.rs
libs/rpc/: core_git.rs  git.rs  git_core.rs  health.rs  mod.rs
proto/: core-git.proto  git-core.proto  git.proto  health.proto
proxy/: Cargo.toml  Dockerfile
proxy/src/: main.rs  server.rs
sql/: auth.sql  repo.sql  sql.sql
src/: lib.rs
src/api/: mod.rs
src/config/: mod.rs
src/db/: auth_db.rs  create.rs  mod.rs  repo_db.rs
src/model/: aksks.rs  branches.rs  bun_migration_locks.rs  bun_migrations.rs  commits.rs  groups.rs  members.rs  (+10 more)
workspace/app/: Cargo.toml
workspace/app/src/: lib.rs
workspace/app/src/api/handler/: mod.rs  version.rs
workspace/app/src/api/handler/email/: captcha.rs  forget.rs
workspace/app/src/api/handler/group/: check.rs  create.rs  delete.rs  list.rs  mod.rs  search.rs
workspace/app/src/api/handler/users/: apply.rs  local.rs  login.rs  logout.rs  mod.rs  reset.rs  update.rs
workspace/app/src/api/middleware/auth/: must_allow_next.rs  must_login.rs
workspace/app/src/boot/: api.rs
workspace/app/src/router/: api.rs
workspace/app/src/server/: db.rs  mod.rs
workspace/app/src/server/email/: captcha.rs  forget.rs
workspace/app/src/service/: mod.rs
workspace/app/src/service/auth/: mod.rs
workspace/app/src/service/email/: captcha.rs  forget.rs  mod.rs
workspace/app/src/service/group/: check.rs  create.rs  delete.rs  list.rs  mod.rs  move_owner.rs  search.rs  update.rs
workspace/app/src/service/repo/: check.rs  create.rs  delete.rs  list.rs  mod.rs  update.rs
workspace/app/src/service/user/: apply.rs  check.rs  login.rs  mod.rs  reset.rs  search.rs  update.rs
workspace/dto/: Cargo.toml
workspace/dto/src/: group.rs  lib.rs  repo.rs  session.rs  users.rs
workspace/dto/src/auth/: base64.rs
workspace/model/: Cargo.toml
workspace/model/src/: lib.rs
workspace/model/src/groups/: group_users.rs  group_users_access.rs  groups.rs  mod.rs
workspace/model/src/object/: mod.rs  object.rs  object_path.rs
workspace/model/src/repos/: branch.rs  commit.rs  mod.rs  repos.rs
workspace/model/src/users/: users.rs
(+79 files in other folders)
