[package]
name = "jzfs"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"

[[bin]]
path = "bin/main.rs"
name = "jzfs-main"

[[bin]]
path = "bin/api.rs"
name = "jzfs-api"


[workspace]
members = [
    "workspace/app",
    "workspace/config",
    "workspace/dto",
    "workspace/model"
]

[dependencies.app]
path = "workspace/app"


[dependencies]
tokio = { version = "1.41.1" ,features = ["full"] }