[package]
name = "gitdata-apis"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "gitdata-apis"

[dependencies]
gitdata = { path = ".." }
tokio = { version = "1", features = ["full"] }
actix-web = { version = "4", features = ["default"] }
actix-files = { version = "0.6.6", features = ["tokio-uring"] }
actix-jobs = { version = "0.1.7", features = [] }
actix-web-lab = { version = "0.23.0", features = ["derive","cbor","actix-files","default"] }
actix-session = { version = "0.10.1", features = ["redis-pool","redis-session","default"] }
actix-session-ext = { version = "0.1.0", features = [] }
actix-identity = { version = "0.8.0", features = [] }
actix-settings = { version = "0.8.0", features = [] }
background-jobs = { version = "0.19.0", features = ["tokio","sled","postgres"] }
background-jobs-actix = { version = "0.19.0", features = [] }
deadpool-redis = { version = "~0.16.0", features = ["rt_tokio_1","cluster","serde"] }
anyhow = { version = "1", features = ["backtrace", "std"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134", features = ["alloc"] }
tonic = { version = "0.12.3", features = ["default"] }
sea-orm = { version = "1", features = ["sqlx-all","runtime-tokio"] }
sea-orm-migration = { version = "1", features = ["runtime-tokio","sqlx-postgres","cli","default"] }
sha256 = { version = "1.5.0", features = ["tokio"] }
lettre = {version = "0.11.10",features = [
    "smtp-transport",
    "serde",
    "rustls-tls",
    "rustls-native-certs",
    "hostname",
    "tokio1",
    "tokio1-rustls-tls",
    "tokio1-native-tls"
]}
tracing-subscriber ={ version = "0.3.19", features = [] }
tracing = { version = "0.1.41", features = [] }
apalis = { version = "0.6.2", features = ["default","limit","retry"] }
apalis-sql = { version = "0.6.2", features = ["postgres","migrate"] }
apalis-cron = { version = "0.6.2", features = [] }
rand = "0.8.5"
chrono = { version = "0.4.39", features = ["default","clock"] }
base64 = { version = "0.22.1", features = ["default"] }