[package]
name = "gitdata-gits"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
russh = { version = "0.49", features = ["flate2","default"] }
russh-keys = { version = "0.49", features = ["yasna"] }
flate2 = { version = "1", features = ["default" ] }
actix-web = { version = "4", features = ["default"] }
actix-files = { version = "0.6.6", features = ["tokio-uring"] }
bytes = { version = "1", features = ["serde"] }
log = { version = "0.4.22", features = [] }
futures = { version = "0.3", features = [] }
git2 = { version = "0.19.0", features = ["ssh","https"] }
async-trait = { version = "0.1", features = [] }
async-stream = { version = "0.3", features = [] }
futures-core = { version = "0.3.31", features = ["default"] }
async-fn-stream = { version = "0.2.2", features = [] }
tonic = { version = "0.12.3", features = ["default"] }
tonic-health = { version = "0.12.3", features = ["default"] }
tempfile = "3.15.0"
chrono = "0.4.39"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
env_logger = { version = "0.11.6", features = ["default"] }
anyhow = { version = "1", features = ["backtrace"] }
uuid = { version = "1.11.1", features = ["v4"] }
[dependencies.gitdata]
path = ".."