[package]
name = "jiaozifs-utlis"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { workspace = true, features = ["derive"]}
hex = { workspace = true }
sha2 = { workspace = true,features = ["default"]}
num_enum = { workspace = true, features = ["default"]}
md-5 = { workspace = true }
sea-orm = { workspace = true ,features = ["sqlx-postgres"]}