[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]

pingora = "^0.4.0"
pingora-lru = "^0.4.0"
pingora-http = "^0.4.0"
pingora-core = "^0.4.0"
pingora-proxy = "^0.4.0"
pingora-load-balancing = "^0.4.0"

serde = { version = "1.0.215",features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = { version = "0.9.33",features = []}
cookie = { version = "0.18.1",features = ["secure"] }

redis = { version = "0.27.5",features = ["tokio","aio","default","r2d2","tokio-comp"] }
r2d2 = { version = "0.8.10",features = [] }
r2d2_redis = { version = "0.14.0",features = [] }

tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
async-trait = "0.1.83"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"

kube = { version = "0.97.0",features = ["derive","kube-client","client"]}
k8s-openapi = { version = "0.23.0",features = ["v1_30"]}