[package]
name = "jzfs_config"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.11.0",features = ["v4","serde"] }
time = { version = "0.3.36",features = ["default","macros","local-offset","serde"] }
serde = { version = "1.0.215",features = ["derive"] }
serde_json = { version = "1.0.133",features = ["alloc"] }

anyhow = { version = "1.0.93", features = ["std"]}
tokio = { version = "1.41.1",features = ["full"] }

tracing = { version = "0.1.40",features = ["log"] }
tracing-subscriber = "0.3.18"

actix-web = { version = "4.9.0" }