[package]
name = "jzfs_entity"
version = "0.1.0"
edition = "2021"


[dependencies.jzfs_config]
path = "../config"

[dependencies]
rbs = {version = "4.5.24",features = ["default"]}
rbatis = {version = "4.5.36",features = ["rbatis-macro-driver"]}
rbdc-pg = {version = "4.5.16",features = ["rbdc"]}

serde = { version = "1.0.215",features = ["derive"] }
tokio = {version = "1.41.1",features = ["full"]}

base64 = { version = "0.22.1",features = ["std"] }