[package]
name = "dto"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215",features = ["derive"] }
serde_json = { version = "1.0.133" }
uuid = { version = "1.11.0",features = ["v4","serde","default"] }
chrono = { version = "0.4.38",features = ["std","serde"] }

rbatis = { version = "4.5.37",features = ["default"] }